--- a/css/styles.css
+++ b/css/styles.css
@@ -2,20 +2,60 @@
     --primary-text-color: #757575;
     --title-text-color: #212121;
     --accent-color: #2196F3;
-    --contact--footer-text-color: rgba(255,255,255,0.6);
+    --contact-footer-text-color: rgba(255,255,255,0.6);
     --dark-bg-color: #2F303A;
     --primary-bg-color: #FFFFFF;
     --section-bg-color: #F5F4FA;
 }
 
 body {
-    background-color: var(--primary-bg-color);
-    color: var(--primary-text-color);
-    font-family: 'roboto', sans-serif;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.03em;
+background-color: var(--primary-bg-color);
+color: var(--primary-text-color);
+font-family: 'roboto', sans-serif;
+font-weight: 400;
+font-size: 14px;
+line-height: 1.14;
+letter-spacing: 0.03em;
+}
+
+.link {
+text-decoration: none;
+}
+
+.list {
+list-style: none;
+}
+
+.button {
+color: var(--primary-bg-color);
+background-color: var(--accent-color);
+font-weight: 700;
+font-size: 16px;
+line-height: 1.88;
+letter-spacing: 0.06em;
+cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+background-color: #188CE8;}
+
+.filters .button {
+color: var(--title-text-color);
+background-color: var(--section-bg-color);
+font-weight: 500;
+line-height: 1.63;
+}
+
+.filters .button:hover,
+.filters .button:focus {
+color: var(--primary-bg-color);
+background-color: var(--accent-color);
+}
+
+.contact .item:hover,
+.contact .item:focus {
+color: var(--accent-color);
 }
 
 .logo {
@@ -31,21 +71,25 @@ color: var(--primary-bg-color);
 }
 
 .accent-logo {
-    color: var(--accent-color);
+color: var(--accent-color);
 }
 
-.link-nav {
+.site-nav .link {
 color: var(--title-text-color);
 font-weight: 500;
 letter-spacing: 0.02em;
 }
 
-.link-nav:hover,
-.link-nav:focus {
+.site-nav .link:hover,
+.site-nav .link:focus {
 color: var(--accent-color);
 }
 
-.contact-link {
+.site-nav .link.current {
+color: var(--accent-color)
+}
+
+.contact .item {
 color: var(--primary-text-color);
 font-weight: 500;
 letter-spacing: 0.02em;
@@ -58,15 +102,8 @@ font-weight: 900;
 font-size: 44px;
 line-height: 1.36;
 letter-spacing: 0.06em;
-}
-
-.button {
-color: var(--primary-bg-color);
-background-color: var(--accent-color);
-font-weight: 700;
-font-size: 16px;
-line-height: 1.88;
-letter-spacing: 0.06em;
+text-align: center;
+text-transform: uppercase;
 }
 
 .advantages-title {
@@ -74,19 +111,21 @@ color: var(--title-text-color);
 font-weight: 700;
 }
 
-.advantages p {
+.advantages .advantages-text {
 line-height: 1.71;
 }
 
-.section-title {
+.work .section-title,
+.team .section-title {
 color: var(--title-text-color);
 font-weight: 700;
 font-size: 36px;
 line-height: 1.16;
+text-align: center;
 }
 
 .team {
-    background-color: var(--section-bg-color);
+background-color: var(--section-bg-color);
 }
 
 .employee {
@@ -96,20 +135,16 @@ font-size: 16px;
 line-height: 1.18;
 }
 
-.team p {
+.team .text-team {
 font-size: 16px;
 line-height: 1.18;
 }
 
-.footer .contact-link {
-color: var(--contact--footer-text-color);
+.footer .item {
+color: var(--contact-footer-text-color);
 line-height: 1.71;
 }
 
-.contact-link:hover,
-.contact-link:focus {
-color: var(--accent-color);
-}
 
 .address p {
 color: var(--primary-bg-color);
@@ -118,4 +153,18 @@ line-height: 1.71;
 
 .footer {
 background-color: var(--dark-bg-color);
+}
+
+.portfolio-title {
+color: var(--title-text-color);
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+}
+
+.portfolio .text {
+color: var(--primary-text-color);
+font-size: 16px;
+line-height: 1.88;
 }
